/* $Id: ChangeLog,v 1.1711 2001-09-30 15:33:16 sandervl Exp $ */

 2001-09-30: Sander van Leeuwen <sandervl@xs4all.nl>
    - INCLUDE:  o Hook constants added to winconst.h
                  (adding them to winuser.h only completely breaks Odin)

 2001-09-30: knut st. osmundsen <kosmunds@csc.com>
    - Makefiles:
                o Added a DOMAKES util which should be used when invoking
                  other makefiles. (see /src/kernel32/makefile)
                o Silenced most of the command $(DO*) commands so the commandline
                  doesn't show.
                o Added some colors on the output from the $(DO*) scripts
                  to make it easier to separate directory and makefile switching
                  from all the other output.
                  Turn this off by using the env.var. BUILD_NOCOLOR.
                o Did some cleanup of the main Makefile and added some missing rules.
                o Made separate .depend file for the include files in the /include dir.
                  This will speedup the 'dep' rule somewhat.
                o Autostart CmdQd with 7 workers if not started and MULTIJOBS are defined.
                o Profile builds uses ./bin/Profile.* subdir for output, not ./bin/Debug.*.
    - Fastdep:  o Corrected processing of C/C++ #include "someheader.h" to
                  start the search in the source code directory.
                o Corrected handling of deleted files.
                o Increased some read and write buffers.
    - Win32k:   o Changed PSZ to char *, since H2INC doesn't understand PSZ.
    - Custombulid:
                o Can now build object libraries for custombuild without separate
                  makefiles. Define CUSTOMBUILD=1 (=1 is important!) to build an
                  DLL.
                o To build all needed object libraries and the custom dll,
                  go to /src and 'nmake custombuild'. There is currently no